APPBUG-4533, E-Tipping- "Alignment issue for delivery fee"
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@42228 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/expressco/cartcontent.css
+++ b/projects/Media/docroot/assets/css/expressco/cartcontent.css
@@ -1089,6 +1089,7 @@ label[for="dontupdatecartlines"] {
 
 .eTippingEnabled .cartsection__totalwrapper #optionaltip.subtotal__rowcell-left {
     min-width: 156px;
+	display: table;
 }
 .eTippingEnabled form .subtotal__rowcell-left{
 	float:left;
@@ -1232,6 +1233,9 @@ label[for="dontupdatecartlines"] {
 }
 .eTippingEnabled .strl_text{
 	font-size:16px;
+}
+.eTippingEnabled #subtotalbox1 .strl_text, .eTippingEnabled .tooltip_holder, .icon-info-before{
+	display: table-cell;
 }
 .eTippingEnabled .orderSummary .strl_text{
 
